Added AWS SDK package

--- a/src/app/error-page/error-page.component.html
+++ b/src/app/error-page/error-page.component.html
@@ -1,1 +1,5 @@
-<p>error-page works!</p>
+<div class="error-container">
+    <h1>Error Page</h1>
+    <!-- Add your error message or content here -->
+    Sorry! This page you are trying to open was unavailiable at this time.
+</div>
